tests/ui/error-codes/E0132.rs
#![feature(start)]

#[start]
fn f< T >() {} //~ ERROR E0132

fn main() {
}
